<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_background"
    tools:context="com.example.weavingspider.weavingspider.HomeActivity">
    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">
        <Button
            android:id="@+id/raiseButton"
            android:textColor="@color/white"
            android:background="@drawable/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raise_button_text"
            android:layout_marginBottom="15dp"
            />
        <Button
            android:id="@+id/answerButton"
            android:textColor="@color/white"
            android:background="@drawable/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_button_text"
            android:layout_marginBottom="15dp"
            />
        <Button
            android:id="@+id/resultButton"
            android:textColor="@color/white"
            android:background="@drawable/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_button_text"
            android:layout_marginBottom="15dp"
            />
        <Button
            android:id="@+id/exploreButton"
            android:textColor="@color/white"
            android:background="@drawable/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explore_button_text"
            android:layout_marginBottom="15dp"
            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
